# SA-Git-Hook

./: Cargo.toml  Dockerfile  README.md  dashboardProviders.yaml  datasources.yaml
.github/: CODEOWNERS
.github/workflows/: build.yml  release.yml  release_artifacts.yml  rust.yml
Hookstaller/: Cargo.toml  install.sh  make_release_zip.sh
Hookstaller/src/: installer.rs  post_commit.rs  util.rs
Installer/: Cargo.toml
Installer/src/: main.rs
PostCommit/src/: main.rs
dashboards/: default.json
infrastructure/: template.yaml
src/: main.rs
