[package]
name = "post-commit"
version = "0.1.0"
authors = ["SourceBolt <dlockwood@sourceallies.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }

