[package]
name = "sai_git_hook"
version = "0.1.0"
authors = ["SourceBolt <dlockwood@sourceallies.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sai_git_hook_installer"
path = "src/installer.rs"

[[bin]]
name = "post-commit"
path = "src/post_commit.rs"


[dependencies]
dirs = "4.0.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
