[package]
name = "commit_collective"
version = "0.1.3"
authors = ["SourceBolt <dlockwood@sourceallies.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "installer"
path = "src/installer.rs"

[[bin]]
name = "post-commit"
path = "src/post_commit.rs"



[dependencies]
clap = "2.33.3"
dirs = "4.0.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
# Don't Need TUI Stuff until next version
#crossterm = "0.20"
#tui = { version = "0.16", default-features = false, features = ['crossterm'] }